--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="game-info">
                     <img src="бой.jpg" alt="Изображение игры Морской бой">
                     <h3>Морской бой</h3>
-                    <button onclick="playGame('Морской бой')">Играть</button>
+                    <button onclick="window.location.href='game.html'">Играть</button>
                 </div>
             </div>
             <div class="game-card" style="background: linear-gradient(90deg, #ffab01, #fdc700, #fefb41); border-color: #FFD700; color: #FF8C00;">
@@ -109,9 +109,18 @@
         </div>
     </div>
 
+    <div class="video-section">
+        <h2>Знакомство с эмоциями</h2>
+        <div class="video-container">
+            <video width="100%" height="auto" controls>
+                <source src="знакомство.mp4" type="video/mp4">
+                Ваш браузер не поддерживает тег video.
+            </video>
+        </div>
+    </div>
+
     <footer>
         <p>Все права защищены</p>
     </footer>
-
 </body>
 </html>
