--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
         </div>
         <nav>
             <img src="головоломка.png" alt="Иконка Головоломка" class="nav-icon">
-            <a href="index.html" aria-label="Вернуться к головоломкам">Вернуться к головоломкам</a>
+            <a href="index.html">Вернуться к головоломкам</a>
             <img src="головоломка.png" alt="Иконка Головоломка" class="nav-icon">
         </nav>
     </header>
