--- a/form.html
+++ b/form.html
@@ -22,12 +22,12 @@
         <h2>Регистрация</h2>
         <form>
             <label for="name">Имя:</label>
-            <input type="text" id="name" name="name" required>
+            <input type="text" id="name" name="name" required placeholder="Введите ваш ник">
             <label for="email">Почта:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" required placeholder="example@example.com">
             <label for="password">Пароль:</label>
-            <input type="password" id="password" name="password" required>
-            <label for="avatar">Аватарка:</label>
+            <input type="password" id="password" name="password" required placeholder="Введите ваш пароль">
+            <label>Аватарка:</label>
             <div class="avatar-selection">
                 <input type="radio" id="avatar1" name="avatar" value="а1.jpg" required>
                 <label for="avatar1"><img src="а1.jpg" alt="Печаль" class="avatar-img"></label>
