--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
     </div>
 
     <div class="video-section">
-        <h2>Знакомство с эмоциями</h2>
+        <h2>Знакомство с эмоциями в мультфильме "Головоломка"</h2>
         <div class="video-container">
-            <video width="100%" height="auto" controls>
+            <video width="800" height="450" controls>
                 <source src="знакомство.mp4" type="video/mp4">
                 Ваш браузер не поддерживает тег video.
             </video>
